src/test/resources/plang-strict/passing/constants/005_constant_value_may_contain_calls_to_pure_functions.plang
**#Constant declaration and usage
**Memory:leet=Integer(124)

függvény f(x: Egész): Egész
  Eredmény := 4 * x
függvény_vége

konstans egész leet = 100 + f(6)

program t
  ki: leet
program_vége
