src/test/resources/plang-strict/parse-error/018_forward_declaration_twice.plang
**#Forward declaration of the same function twice
**FirstErrorLoc:4,11
majd_lesz függvény f(x: Egész): Egész
majd_lesz függvény f(x: Egész): Egész

program t
  ki: ">_>"
program_vége
